fix: social network wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,6 @@ i {
 
 .social-networks {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   gap: 1.3rem;
 }
